[project]
name = "pandas-sql-tutorial"
version = "0.1.0"
description = "Interactive tutorial: pandas for SQL-familiar Python developers"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "duckdb>=1.1",
    "jupyter>=1.1",
    "jupyterlab>=4.3",
    "notebook>=7.3",
    "ipykernel>=6.29",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]
